# x-native

./: .gitignore  README.md
source/: CMakeLists.txt
source/app/app_client_headless/: CMakeLists.txt
source/app/app_client_headless/src/: main.cpp
source/app/app_server/: CMakeLists.txt
source/app/app_server/src/: main.cpp
source/app/client-headless/: CMakeLists.txt
source/app/server/: CMakeLists.txt
source/app/server/src/: main.cpp
source/lib/lib_common/: CMakeLists.txt
source/lib/lib_common/inc/: assert.h  constants.h  hash.h  logging.h  maths.h  profiletimer.h  unittests.h
source/lib/lib_common/src/: libdummy.cpp  logging.cpp  profiletimer.cpp  unittests.cpp
source/lib/lib_game/: CMakeLists.txt
source/lib/lib_game/inc/: gameconsole.h  gamehighrestimer.h  gameidb.h  gameidbgenerated.h  gameidbprefix.h  gamejobsystem.h  gamesettings.h
source/lib/lib_game/inc/consoledevices/: consoledevice.h  consoledevicewindows.h
source/lib/lib_game/src/: gameconsole.cpp  gamehighrestimer.cpp  gameidb.cpp  gamejobsystem.cpp  gamesettings.cpp
source/lib/lib_game/src/consoledevices/: consoledevice.cpp  consoledevicewindows.cpp
source/lib/lib_net/: CMakeLists.txt
source/lib/lib_net/inc/: networkconnection.h  networkconnectionmanager.h  networkmanager.h  networkmanagerclient.h  networkmanagerdedicatedserver.h  networkobject.h  networkshared.h  networksynchronisation.h  networkvariable.h
source/lib/lib_net/inc/objects/: networkactorobject.h
source/lib/lib_net/src/: networkconnection.cpp  networkmanager.cpp  networkmanagerclient.cpp  networkmanagerdedicatedserver.cpp  networkobject.cpp  networkshared.cpp  networksynchronisation.cpp  networkvariable.cpp
source/lib/lib_net/src/objects/: networkactorobject.cpp
source/lib/shared/: CMakeLists.txt
source/lib/shared/inc/: libdummy.h
source/lib/shared/src/: libdummy.cpp
